kubernetes-manifests/namespace_ms-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
