kubernetes-manifests/service-emailservice.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: emailservice
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 5000
    protocol: TCP
    targetPort: 8080
  selector:
    app: emailservice
  sessionAffinity: None
  type: ClusterIP
