kubernetes-manifests/service-frontend-external.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: frontend-external
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30762
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  sessionAffinity: None
  type: LoadBalancer
