kubernetes-manifests/service-productcatalogservice.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: productcatalogservice
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 3550
    protocol: TCP
    targetPort: 3550
  selector:
    app: productcatalogservice
  sessionAffinity: None
  type: ClusterIP
