kubernetes-manifests/service-redis-cart.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: redis-cart
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-cart
  sessionAffinity: None
  type: ClusterIP
