kubernetes-manifests/service-shippingservice.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: shippingservice
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: shippingservice
  sessionAffinity: None
  type: ClusterIP
