kubernetes-manifests/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: frontend
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
